Closed Bug 1593673 Opened 5 years ago Closed 5 years ago

fix -Werror=implicit-fallthrough warnings in Disasm-vixl.cpp

Categories

(Core :: JavaScript Engine: JIT, defect)

ARM64
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: froydnj, Assigned: froydnj)

References

Details

Attachments

(1 file)

These come up with GCC 7, particularly.

Otherwise we get warnings about possible (unintended) fallthrough here.

Pushed by nfroyd@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7fa59747bc5d add a VIXL_UNREACHABLE in SubstituteImmediateField; r=sstangl
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: