Bug 1593673 - add a VIXL_UNREACHABLE in SubstituteImmediateField; r=sstangl

Otherwise we get warnings about possible (unintended) fallthrough here.

Differential Revision: https://phabricator.services.mozilla.com/D51614